@@ -115,20 +115,19 @@ static const struct option longopts[] = {
 #if defined(CSPLINE_INTERPOLATION) || defined(LAGRANGE_INTERPOLATION)
     { "no-4-point-interpolation",       no_argument, NULL, '4' << 8 },
     { "4-point-interpolation"   , optional_argument, NULL, '4' << 8 },
-#endif
     { "volume"                  , required_argument, NULL, 'A' << 8 },
     { "drum-power"              , required_argument, NULL, 227 << 8 },
-    { "no-auto-volume-conpensation",    no_argument, NULL, 228 << 8 },
-    { "auto-volume-conpensation", optional_argument, NULL, 228 << 8 },
+    { "no-volume-conpansation"  ,       no_argument, NULL, 228 << 8 },
+    { "volume-conpansation"     , optional_argument, NULL, 228 << 8 },
     { "buffer-fragments"        , required_argument, NULL, 'B' << 8 },
     { "control-ratio"           , required_argument, NULL, 'C' << 8 },
     { "drums"                   , required_argument, NULL, 'D' << 8 },
     { "effects"                 , required_argument, NULL, 'E' << 8 },
     { "no-fast-panning"         ,       no_argument, NULL, 'F' << 8 },
     { "fast-panning"            , optional_argument, NULL, 'F' << 8 },
-    { "keysig"                  , required_argument, NULL, 'H' << 8 },
+    { "force-keysig"            , required_argument, NULL, 'H' << 8 },
     { "default-program"         , required_argument, NULL, 'I' << 8 },
-    { "key"                     , required_argument, NULL, 'K' << 8 },
+    { "adjust-key"              , required_argument, NULL, 'K' << 8 },
     { "patch-path"              , required_argument, NULL, 'L' << 8 },
     { "pcm-file"                , required_argument, NULL, 'M' << 8 },
 #if defined(GAUSS_INTERPOLATION) || defined(NEWTON_INTERPOLATION)
@@ -146,7 +145,7 @@ static const struct option longopts[] = {
     { "no-anti-alias"           ,       no_argument, NULL, 'a' << 8 },
     { "anti-alias"              , optional_argument, NULL, 'a' << 8 },
     { "background"              ,       no_argument, NULL, 'b' << 8 },
-    { "config"                  , required_argument, NULL, 'c' << 8 },
+    { "config-file"             , required_argument, NULL, 'c' << 8 },
     { "interface-path"          , required_argument, NULL, 'd' << 8 },
     { "evil"                    , required_argument, NULL, 'e' << 8 },
     { "no-fast-decay"           ,       no_argument, NULL, 'f' << 8 },
